fix: remove weird jumping when hovering buttons

--- a/src/bar.scss
+++ b/src/bar.scss
@@ -9,6 +9,7 @@ button {
   padding-top: 0;
   padding-bottom: 0;
   background-color: transparent;
+  border-bottom: 3px solid transparent;
 }
 
 button:active {
